force-app/main/default/objects/custom_create26__c/custom_create26__c.object-meta.xml
<CustomObject>
    <label>Custom created object26</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects26</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>