force-app/main/default/objects/custom_create26__c/fields/custom_create_26field563__c.field-meta.xml
<CustomField>
    <fullName>custom_create_26field563__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 26field563</label>
    <type>Checkbox</type>
</CustomField>